--- a/ChampionMains.Pyrobot/content/css/newProfile.scss
+++ b/ChampionMains.Pyrobot/content/css/newProfile.scss
@@ -11,6 +11,7 @@
     flex-wrap: wrap;
     align-items: center;
     border-top: 1px solid rgba(0, 0, 0, 0.12);
+    padding: 0 16px;
 
     &:last-child {
         border-bottom: 1px solid rgba(0, 0, 0, 0.12);
@@ -18,6 +19,7 @@
 
     .badge {
         width: calc(80px + 2.7vw);
+        margin: 0 -16px;
     }
 
     .info {
